--- a/src/styles.css
+++ b/src/styles.css
@@ -1,21 +1,54 @@
-* {
-  font-family: Arial, Helvetica, sans-serif;
+#map {
+  position: relative;
 }
 
-html, body {
-  margin: 0;
-  border: 0;
-  padding: 0;
-  background-color: #fff;
+#map img {
+  width: 100%; /* oder eine andere Größe */
 }
 
-main {
-  margin: auto;
-  width: 50%;
-  padding: 20px;
+.punkt {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: red;
 }
 
-main > h1 {
-  text-align: center;
-  font-size: 3.5em;
+/* weitere Punkte hier positionieren */
+#punkt1 { top: 50px; left: 50px; }
+#punkt2 { top: 100px; left: 100px; }
+#punkt3 { top: 150px; left: 150px; }
+#punkt4 { top: 200px; left: 200px; }
+#punkt5 { top: 250px; left: 250px; }
+#punkt6 { top: 300px; left: 300px; }
+#punkt7 { top: 350px; left: 350px; }
+#punkt8 { top: 400px; left: 400px; }
+#punkt9 { top: 450px; left: 450px; }
+#punkt10 { top: 500px; left: 500px; }
+#punkt11 { top: 550px; left: 550px; }
+#punkt12 { top: 600px; left: 600px; }
+
+.farbe {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+}
+
+#legende {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: white;
+  border: 1px solid black;
+  padding: 10px;
+}
+
+.tooltip {
+  display: none;
+  position: absolute;
+  background-color: white;
+  border: 1px solid black;
+  padding: 5px;
+  z-index: 100;
 }
