--- a/src/styles.css
+++ b/src/styles.css
@@ -7,12 +7,22 @@
   height: auto;
 }
 
+#svg-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+}
+
 .punkt {
   position: absolute;
   width: 20px;
   height: 20px;
   border-radius: 50%;
   background-color: red;
+  z-index: 3;
 }
 
 .farbe {
